--- a/index.html
+++ b/index.html
@@ -21,5 +21,30 @@
     <section id="mission-goals">
         <h2>الرسالة والأهداف</h2>
     </section>
+    
+    <!-- قسم الأوائل -->
+    <section id="top-students">
+        <h2>الأوائل</h2>
+        <div class="student-card">
+            <div class="student-info">
+                <h3>الطالب: أحمد محمد</h3>
+                <p>النسبة: 95%</p>
+                <p>التخصص: تمريض عام</p>
+                <p>السنة الدراسية: السنة الرابعة</p>
+                <p>الترتيب: الأول</p>
+            </div>
+        </div>
+
+        <div class="student-card">
+            <div class="student-info">
+                <h3>الطالبة: سارة إبراهيم</h3>
+                <p>النسبة: 94%</p>
+                <p>التخصص: تمريض طوارئ</p>
+                <p>السنة الدراسية: السنة الرابعة</p>
+                <p>الترتيب: الثاني</p>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
