--- a/index.html
+++ b/index.html
@@ -1,50 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-    
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>معهد التمريض</h1>
-        <nav>
-            <a href="#mission-goals">الرسالة والأهداف</a>
-            <a href="#faculty">الهيئة التدريسية</a>
-            <a href="#graduation-projects">مشاريع التخرج</a>
-            <a href="#top-students">الأوائل</a>
-            <a href="#events-activities">الفعاليات والأنشطة</a>
-        </nav>
+      <h1>معهد التمريض</h1>
+      <nav>
+        <a href="#mission-goals">الرسالة والأهداف</a>
+        <a href="#faculty">الهيئة التدريسية</a>
+        <a href="#graduation-projects">مشاريع التخرج</a>
+        <a href="#top-students">الأوائل</a>
+        <a href="#events-activities">الفعاليات والأنشطة</a>
+      </nav>
     </header>
     <section id="mission-goals">
-        <h2>الرسالة والأهداف</h2>
+      <h2>الرسالة والأهداف</h2>
     </section>
-    
-    <!-- قسم الأوائل -->
+
+    <section id="graduation-projects">
+      <h2>مشاريع التخرج</h2>
+      <div class="project-card">
+        <div class="project-info">
+          <h3>مشروع: الرعاية الصحية عن بعد</h3>
+          <p>الطالب: أحمد محمد</p>
+          <p>المشرف: د. خالد علي</p>
+        </div>
+      </div>
+    </section>
+
     <section id="top-students">
-        <h2>الأوائل</h2>
-        <div class="student-card">
-            <div class="student-info">
-                <h3>الطالب: أحمد محمد</h3>
-                <p>النسبة: 95%</p>
-                <p>التخصص: تمريض عام</p>
-                <p>السنة الدراسية: السنة الرابعة</p>
-                <p>الترتيب: الأول</p>
-            </div>
+      <h2>الأوائل</h2>
+      <div class="student-card">
+        <div class="student-info">
+          <h3>الطالب: أحمد محمد</h3>
+          <p>النسبة: 95%</p>
+          <p>التخصص: تمريض عام</p>
+          <p>السنة الدراسية: السنة الرابعة</p>
+          <p>الترتيب: الأول</p>
         </div>
+      </div>
 
-        <div class="student-card">
-            <div class="student-info">
-                <h3>الطالبة: سارة إبراهيم</h3>
-                <p>النسبة: 94%</p>
-                <p>التخصص: تمريض طوارئ</p>
-                <p>السنة الدراسية: السنة الرابعة</p>
-                <p>الترتيب: الثاني</p>
-            </div>
+      <div class="student-card">
+        <div class="student-info">
+          <h3>الطالبة: سارة إبراهيم</h3>
+          <p>النسبة: 94%</p>
+          <p>التخصص: تمريض طوارئ</p>
+          <p>السنة الدراسية: السنة الرابعة</p>
+          <p>الترتيب: الثاني</p>
         </div>
+      </div>
     </section>
-
-</body>
+  </body>
 </html>
