--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
           <p>المشرف: د. خالد علي</p>
         </div>
       </div>
+      <div class="project-card">
+        <div class="project-info">
+          <h3>مشروع: استخدام الذكاء الاصطناعي في التمريض</h3>
+          <p>الطالبة: سارة إبراهيم</p>
+          <p>المشرف: د. محمد عبد الله</p>
+        </div>
+      </div>
     </section>
 
     <section id="top-students">
@@ -43,7 +50,6 @@
           <p>الترتيب: الأول</p>
         </div>
       </div>
-
       <div class="student-card">
         <div class="student-info">
           <h3>الطالبة: سارة إبراهيم</h3>
