--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
           <p>الترتيب: الأول</p>
         </div>
       </div>
+
       <div class="student-card">
         <div class="student-info">
           <h3>الطالبة: سارة إبراهيم</h3>
@@ -80,6 +81,27 @@
           <p>الترتيب: الثاني</p>
         </div>
       </div>
+
+      <div class="student-card">
+        <div class="student-info">
+            <h3>الطالب: خالد يوسف</h3>
+            <p>النسبة: 93%</p>
+            <p>التخصص: تمريض أطفال</p>
+            <p>السنة الدراسية: السنة الثالثة</p>
+            <p>الترتيب: الثالث</p>
+        </div>
+    </div>
+
+    <div class="student-card">
+        <div class="student-info">
+            <h3>الطالبة: مريم محمد</h3>
+            <p>النسبة: 92%</p>
+            <p>التخصص: تمريض جراحة</p>
+            <p>السنة الدراسية: السنة الثانية</p>
+            <p>الترتيب: الرابع</p>
+        </div>
+    </div>
+    
     </section>
   </body>
 </html>
