add faculty html

--- a/index.html
+++ b/index.html
@@ -42,6 +42,40 @@
         </button>
     </section>
 
+    <section id="faculty">
+      <h2>الهيئة التدريسية</h2>
+      <div class="faculty-member">
+          <img src="faculty1.jpg" alt="صورة د. خالد علي" style="width:150px;height:150px;">
+          <div class="faculty-info">
+              <h3>د. خالد علي</h3>
+              <p>أستاذ التمريض العام</p>
+              <p>الخبرة: 15 سنة</p>
+              <p>الاهتمامات البحثية: رعاية المرضى في العناية المركزة</p>
+          </div>
+      </div>
+      
+      <div class="faculty-member">
+          <img src="faculty2.jpg" alt="صورة د. محمد عبد الله" style="width:150px;height:150px;">
+          <div class="faculty-info">
+              <h3>د. محمد عبد الله</h3>
+              <p>أستاذ التمريض النفسي</p>
+              <p>الخبرة: 10 سنوات</p>
+              <p>الاهتمامات البحثية: تأثير الذكاء الاصطناعي على الصحة النفسية</p>
+          </div>
+      </div>
+  
+      <div class="faculty-member">
+          <img src="faculty3.jpg" alt="صورة د. سارة أحمد" style="width:150px;height:150px;">
+          <div class="faculty-info">
+              <h3>د. سارة أحمد</h3>
+              <p>أستاذة تمريض الأطفال</p>
+              <p>الخبرة: 8 سنوات</p>
+              <p>الاهتمامات البحثية: صحة الأطفال في وحدات الرعاية الحرجة</p>
+          </div>
+      </div>
+  </section>
+  
+
     <section id="graduation-projects">
       <h2>مشاريع التخرج</h2>
       <div class="project-card">
