add faculty image and edit html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section id="faculty">
       <h2>الهيئة التدريسية</h2>
       <div class="faculty-member">
-          <img src="faculty1.jpg" alt="صورة د. خالد علي" style="width:150px;height:150px;">
+          <img src="../FinalProjectHub/1.jpg" alt="صورة د. خالد علي" style="width:150px;height:150px;">
           <div class="faculty-info">
               <h3>د. خالد علي</h3>
               <p>أستاذ التمريض العام</p>
@@ -55,7 +55,7 @@
       </div>
       
       <div class="faculty-member">
-          <img src="faculty2.jpg" alt="صورة د. محمد عبد الله" style="width:150px;height:150px;">
+          <img src="../FinalProjectHub/2.jpg" alt="صورة د. محمد عبد الله" style="width:150px;height:150px;">
           <div class="faculty-info">
               <h3>د. محمد عبد الله</h3>
               <p>أستاذ التمريض النفسي</p>
@@ -65,7 +65,7 @@
       </div>
   
       <div class="faculty-member">
-          <img src="faculty3.jpg" alt="صورة د. سارة أحمد" style="width:150px;height:150px;">
+          <img src="../FinalProjectHub/3.jpg" alt="صورة د. سارة أحمد" style="width:150px;height:150px;">
           <div class="faculty-info">
               <h3>د. سارة أحمد</h3>
               <p>أستاذة تمريض الأطفال</p>
