--- a/index.html
+++ b/index.html
@@ -149,5 +149,46 @@
       </div>
   </div>
     </section>
+
+
+    <!-- قسم الفعاليات والأنشطة -->
+<section  id = "events-activities" class="events">
+  <h2>الفعاليات والأنشطة</h2>
+
+  <div class="event">
+      <h3>ورشة تدريبية في الإسعافات الأولية</h3>
+      <p>تاريخ: 15 أكتوبر 2024</p>
+      <p>الوصف: ورشة تدريبية متخصصة في الإسعافات الأولية تشمل تدريبات عملية.</p>
+  </div>
+
+  <div class="event">
+      <h3>ندوة حول الصحة النفسية</h3>
+      <p>تاريخ: 22 أكتوبر 2024</p>
+      <p>الوصف: ندوة توعوية عن أهمية الصحة النفسية وتأثيرها على الأداء المهني.</p>
+  </div>
+
+  <div class="event">
+      <h3>المؤتمر السنوي للتمريض</h3>
+      <p>تاريخ: 5 نوفمبر 2024</p>
+      <p>الوصف: مؤتمر يجمع خبراء التمريض من مختلف الدول لمناقشة أحدث التطورات في المجال.</p>
+  </div>
+
+
+  <h2>    أنشطة مستقبلية  </h2>
+
+   
+  <div class="event future">
+      <h3>برنامج تدريبي على الأجهزة الطبية الحديثة</h3>
+      <p>تاريخ: 10 يناير 2025</p>
+      <p>الوصف: تدريب متخصص على استخدام أحدث الأجهزة الطبية في التمريض.</p>
+  </div>
+
+  <div class="event future">
+      <h3>ورشة حول العناية المركزة</h3>
+      <p>تاريخ: 28 فبراير 2025</p>
+      <p>الوصف: ورشة متقدمة حول الرعاية التمريضية في وحدات العناية المركزة.</p>
+  </div>
+</section>
+
   </body>
 </html>
