--- a/index.html
+++ b/index.html
@@ -190,5 +190,19 @@
   </div>
 </section>
 
+  <!-- تذييل الصفحة -->
+<footer>
+  <div class="footer-content">
+      <p>&copy; 2024 معهد التمريض - جميع الحقوق محفوظة</p>
+      <ul class="socials">
+          <li><a href="#">فيسبوك</a></li>
+          <li><a href="#">تويتر</a></li>
+          <li><a href="#">إنستجرام</a></li>
+          <li><a href="#">لينكدإن</a></li>
+      </ul>
+  </div>
+</footer>
+
+
   </body>
 </html>
