--- a/index.html
+++ b/index.html
@@ -37,6 +37,27 @@
           <p>المشرف: د. محمد عبد الله</p>
         </div>
       </div>
+      <div class="project-card">
+        <div class="project-info">
+          <h3>مشروع: تحسين الرعاية في وحدات العناية المركزة للأطفال</h3>
+          <p>الطالبة: ليلى خالد</p>
+          <p>المشرف: د. سارة أحمد</p>
+        </div>
+      </div>
+      <div class="project-card">
+        <div class="project-info">
+          <h3>مشروع: تأثير الإرشاد النفسي على المرضى في المستشفيات</h3>
+          <p>الطالبة: مريم علي</p>
+          <p>المشرف: د. محمد عبد الله</p>
+        </div>
+      </div>
+      <div class="project-card">
+        <div class="project-info">
+          <h3>مشروع: تطوير نماذج محاكاة طبية لتدريب الممرضين</h3>
+          <p>الطالب: يوسف حسن</p>
+          <p>المشرف: د. خالد علي</p>
+        </div>
+      </div>
     </section>
 
     <section id="top-students">
@@ -58,6 +79,7 @@
           <p>السنة الدراسية: السنة الرابعة</p>
           <p>الترتيب: الثاني</p>
         </div>
+        
       </div>
     </section>
   </body>
